--- a/Navidad-2025.html
+++ b/Navidad-2025.html
@@ -504,18 +504,21 @@ body {
     <p></p>
     <br>
     <span style="text-shadow: 1px 1px 3px black; color:blue">
-        !!🎄&nbsp;&nbsp;Feliz navidad&nbsp;&nbsp;🎄!!
+        !!🎄&nbsp;&nbsp;FELIZ NAVIDAD 2025&nbsp;&nbsp;🎄!!
     </span>
     <p></p>
     <img src="ror.png" style="animation: pulse 0s infinite;" width="90%" height="4%">
 </div>
-
+	
 <br>
 <!-- ✏️ EDITA AQUÍ TU NOMBRE TAMBIÉN -->
 
 <h3 ><span style="text-shadow: 1px 1px 3px silver; color:blue">SALUDOS AFECTUOSOS DE</span></h3>
 <h1 id="usernameb"></h1>
 
+<br>
+<h1><span style="text-shadow: 1px 1px 3px silver; color:blue">DICIEMBRE - 2025</span></h1>
+	
 </div>
 
 	
@@ -628,6 +631,7 @@ window.onload = function() {
 </body>
 
 </html>
+
 
 
 
