--- a/Navidad-2025.html
+++ b/Navidad-2025.html
@@ -517,7 +517,7 @@ body {
 <h1 id="usernameb"></h1>
 
 <br>
-<h1><span style="text-shadow: 1px 1px 3px silver; color:blue">DICIEMBRE - 2025</span></h1>
+<h1><span style="text-shadow: 1px 1px 3px silver; color:blue; font-size: 30px;">DICIEMBRE - 2025</span></h1>
 	
 </div>
 
@@ -631,6 +631,7 @@ window.onload = function() {
 </body>
 
 </html>
+
 
 
 
