--- a/Navidad-2025.html
+++ b/Navidad-2025.html
@@ -513,7 +513,7 @@ body {
 <br>
 <!-- ✏️ EDITA AQUÍ TU NOMBRE TAMBIÉN -->
 
-<h3 ><span style="text-shadow: 1px 1px 3px silver; color:blue">🎄SALUDOS AFECTUOSOS DE:;🎄</span></h3>
+<h3 ><span style="text-shadow: 1px 1px 3px silver; color:blue">🎄&nbsp;&nbsp;SALUDOS AFECTUOSOS DE:&nbsp;&nbsp;🎄</span></h3>
 <h1 id="usernameb"></h1>
 
 <br>
@@ -631,6 +631,7 @@ window.onload = function() {
 </body>
 
 </html>
+
 
 
 
